route to pages, ignore ico message

--- a/public/polo.html
+++ b/public/polo.html
@@ -22,19 +22,9 @@
           </li>
           <li class="selected">
             <a href="polo.html">Water Polo</a>
-            <ul>
-              <li>
-                <a href="polosinglepost.html">Water Polo single post</a>
-              </li>
-            </ul>
           </li>
           <li>
             <a href="events.html">events</a>
-            <ul>
-              <li>
-                <a href="eventssinglepost.html">events single post</a>
-              </li>
-            </ul>
           </li>
           <li>
             <a href="contact.html">Contact</a>
@@ -57,7 +47,7 @@
           </li>
         </ul>
         <h3><span>What's Water Polo? Can you play?</span></h3>
-        <p>Water polo is  basketball in water with goals and goalies. Goalies and can use both hands at a time. Everyone else can use one. The game has changed over the years, but for the last hundred years it's been a fiervely competative and creative international game.</p>
+        <p>Water polo is  basketball in water with goals and goalies. Goalies can use both hands at a time. Everyone else can use one. The game has changed over the years, but for the last hundred years it's been a fiercely competative and creative international game.</p>
         <p>To play you must be able to swim 500 yards without stopping, tread water, and learn quickly. We have several players who have picked up the sport as adults. It's tough but very doable if you want to learn.</p>
       </div>
     </div>
