add contact details

--- a/public/contact.html
+++ b/public/contact.html
@@ -40,6 +40,10 @@
         <p>261 Bedford Ave, Brooklyn, NY 11211</p>
         <h2>Email</h2>
         <a href="mailto:info@brooklynwets.com?Subject=Water%20Polo">info@brooklynwets.com</a>
+        <h2>CONTRIBUTE</h2>
+        <a href="https://www.generosity.com/sports-fundraising/brooklyn-wets-water-polo-equipment">Crowdfunding Campaign</a>
+        <h2>MEETUP</h2>
+        <a href="http://www.meetup.com/New-York-Water-Polo-Meetup/">Our meetup page</a>
         <h4>JOIN THE BK WETS NOW</h4>
         <p>All levels are welcome. Rec Center Membership is required.</p>
         <a href="https://www.nycgovparks.org/programs/recreation-centers/membership">Rec Membership Info</a>
