add whiteboard and some styling

--- a/public/contact.html
+++ b/public/contact.html
@@ -29,6 +29,9 @@
           <li class="selected">
             <a href="contact.html">Contact</a>
           </li>
+          <li>
+            <a href="whiteboard.html">Whiteboard</a>
+          </li>
         </ul>
       </div>
     </div>
