--- a/public/events.html
+++ b/public/events.html
@@ -21,7 +21,7 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a href="polo.html">Water Polo</a>
+            <a href="youth.html">Youth</a>
           </li>
           <li class="selected">
             <a href="events.html">events</a>
@@ -43,19 +43,8 @@
             <img src="images/lake-mohawk.jpg" alt="">
             <div>
               <h1>LAKE MOHAWK</h1>
-              <p>JUNE 18-19, 2016</p>
+              <p>JUNE 17-18, 2017</p>
               <p>Outdoor Tournament at <a href="http://www.lakemohawkpool.com/">Lake Mohawk Pool</a></p>
-            </div>
-          </li>
-          <li>
-            <img src="images/peddie-pool.jpg" alt="">
-            <div>
-              <h1>PEDDIE</h1>
-              <p>July 17, 2016</p>
-              <p>Clinic 1-2:15PM (ages 10-16)</p>
-              <p>Masters Games 3-9pm</p>
-              <p>155 Etra Road, Hightstown, NJ 08520</p>
-              <p>(NJ Transit: Princeton Junction)</p>
             </div>
           </li>
         </ul>
@@ -63,7 +52,7 @@
     </div>
     <div id="footer">
       <div>
-        <p>&copy; 2023 by RNRNR. All rights reserved.</p>
+        <p>&copy; 2017 by Brooklyn Wets. All rights reserved.</p>
       </div>
     </div>
   </div>
