--- a/public/polo.html
+++ b/public/polo.html
@@ -24,6 +24,9 @@
             <a href="polo.html">Water Polo</a>
           </li>
           <li>
+            <a href="youth.html">Youth</a>
+          </li>
+          <li>
             <a href="events.html">events</a>
           </li>
           <li>
@@ -56,7 +59,7 @@
     </div>
     <div id="footer">
       <div>
-        <p>&copy; 2016 by Brooklyn Wets. All rights reserved.</p>
+        <p>&copy; 2017 by Brooklyn Wets. All rights reserved.</p>
       </div>
     </div>
   </div>
