--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a href="polo.html">Water Polo</a>
+            <a href="youth.html">Youth</a>
           </li>
           <li>
             <a href="events.html">events</a>
@@ -51,7 +51,7 @@
     </div>
     <div id="footer">
       <div>
-        <p>&copy; 2016 by Brooklyn Wets. All rights reserved.</p>
+        <p>&copy; 2017 by Brooklyn Wets. All rights reserved.</p>
       </div>
     </div>
   </div>
