women page style update

--- a/public/polo.html
+++ b/public/polo.html
@@ -24,7 +24,7 @@
             <a href="polo.html">Water Polo</a>
           </li>
           <li>
-            <a href="youth.html">Youth</a>
+            <a href="women.html">women</a>
           </li>
           <li>
             <a href="events.html">events</a>
