--- a/public/about.html
+++ b/public/about.html
@@ -21,7 +21,7 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a href="youth.html">Youth</a>
+            <a href="women.html">women</a>
           </li>
           <li>
             <a href="events.html">events</a>
@@ -46,7 +46,7 @@
         <h2>Be Part of Our Team</h2>
         <p>We are straight, gay, white, brown, black, Romanian, Canadian, Australian, etc. It's New York, so it's a diverse crew. It's a good time, and you should join us.</p>
         <h2>Practice Times</h2>
-        <p>We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We may expand to other times this fall. Stay tuned.</p>
+        <p>We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We also have a more instructional beinnger friendly practice at Mondays at 6pm at the Gertrude Ederle Recreation Center.</p>
       </div>
     </div>
     <div id="footer">
