--- a/public/contact.html
+++ b/public/contact.html
@@ -21,7 +21,7 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a href="youth.html">Youth</a>
+            <a href="women.html">women</a>
           </li>
           <li>
             <a href="events.html">events</a>
@@ -38,9 +38,19 @@
     <div id="body" class="contact">
       <div>
         <h1>Contact us</h1>
+        <h2>Saturdays at 2pm</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.1361967857847!2d-73.96257888459498!3d40.71501817933152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259608942751b%3A0x3a85b95850bbd7a2!2sMetropolitan+Recreation+Center!5e0!3m2!1sen!2sus!4v1466816902978" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <h2>ADDRESS</h2>
         <p>261 Bedford Ave, Brooklyn, NY 11211</p>
+
+<hr>
+<br>
+        <h2>Beginner Friendly Mondays at 6pm</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.5721163920657!2d-73.99085078464388!3d40.77143484191432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2585c023c3be7%3A0x11d0cc87326d1256!2sGertrude+Ederle+Recreation+Center!5e0!3m2!1sen!2sus!4v1491440684777" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <h2>ADDRESS</h2>
+        <p>232 W 60th St, New York, NY 10023</p>
+
+
         <h2>Email</h2>
         <a href="mailto:info@brooklynwets.com?Subject=Water%20Polo">info@brooklynwets.com</a>
         <h2>CONTRIBUTE</h2>
