--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a href="youth.html">Youth</a>
+            <a href="women.html">women</a>
           </li>
           <li>
             <a href="events.html">events</a>
