--- a/public/women.html
+++ b/public/women.html
@@ -6,6 +6,14 @@
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
   <script src="js/mobile.js" type="text/javascript"></script>
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; color: white;}
+  #mc_embed_signup .mc-field-group input {width: 50%;}
+  #mc_embed_signup .mc-field-group {padding-top: 0px;}
+  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+  </style>
 </head>
 <body>
   <div id="page">
@@ -20,10 +28,10 @@
           <li>
             <a href="about.html">About</a>
           </li>
-          <li>
+          <li class="selected">
             <a href="women.html">women</a>
           </li>
-          <li class="selected">
+          <li>
             <a href="events.html">events</a>
           </li>
           <li>
@@ -37,17 +45,12 @@
     </div>
     <div id="body">
       <div>
-        <h1>events</h1>
-        <ul>
-          <li>
-            <img src="images/lake-mohawk.jpg" alt="">
-            <div>
-              <h1>LAKE MOHAWK</h1>
-              <p>JUNE 17-18, 2017</p>
-              <p>Outdoor Tournament at <a href="http://www.lakemohawkpool.com/">Lake Mohawk Pool</a></p>
-            </div>
-          </li>
-        </ul>
+        <h1>Urban Dolphins!</h1>
+        <img src="images/women.jpg" alt="">
+
+        <div>
+          <p>Our women's team is a combination of experienced and new players, nicknamed the Urban Dolphins. Our ladies like to play against the boys and against other women, scrimmaging with NYAC and Columbia. They also like to hand out outside of the pool (NO BOYS ALLOWED!). </p>
+        </div>
       </div>
     </div>
     <div id="footer">
