--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
   <title>Brooklyn Wets</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/mobile.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/footer.js"></script>
 </head>
 <body>
   <div id="page">
@@ -50,7 +53,12 @@
       </div>
     </div>
     <div id="footer">
-      <div>
+      <div class="social-media">
+        <i class="fa fa-instagram" style="font-size:48px;color:white"></i>
+        <i class="fa fa-meetup" style="font-size:48px;color:white"></i>
+        <i class="fa fa-envelope-o" style="font-size:48px;color:white"></i>
+      </div>
+      <div class="mark">
         <p>&copy; 2017 by Brooklyn Wets. All rights reserved.</p>
       </div>
     </div>
