added social media links

--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,14 @@
     </div>
     <div id="footer">
       <div class="social-media">
-        <i class="fa fa-instagram" style="font-size:48px;color:white"></i>
-        <i class="fa fa-meetup" style="font-size:48px;color:white"></i>
-        <i class="fa fa-envelope-o" style="font-size:48px;color:white"></i>
+        <a href="https://www.instagram.com/brooklynwetswp/" target="_blank">
+          <i class="fa fa-instagram"></i>
+        </a>
+        <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" target="_blank">
+          <i class="fa fa-meetup"></i>
+        </a>
+
+        <i class="fa fa-envelope-o"></i>
       </div>
       <div class="mark">
         <p>&copy; 2017 by Brooklyn Wets. All rights reserved.</p>
