added content from women and about page to the home page, deleted events link

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/mobile.js" type="text/javascript"></script>
-  <script type="text/javascript" src="js/footer.js"></script>
 </head>
 <body>
   <div id="page">
@@ -21,14 +20,14 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="#about-us">About</a>
           </li>
           <li>
-            <a href="women.html">women</a>
+            <a href="#women">women</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="events.html">events</a>
-          </li>
+          </li> -->
           <li>
             <a href="contact.html">Contact</a>
           </li>
@@ -45,10 +44,29 @@
         </div>
       </div>
       <div class="body">
-        <div>
+        <div class="title">
           <h1>Killing it</h1>
           <p>We're the most fun you can have playing water polo in New York.</p>
-          <a href="events.html" class="more">Read More</a>
+        </div>
+        <div id="about-us" class="about-us">
+          <h1>ABOUT BK WETS</h1>
+          <img src="images/shallow-deep.jpg" alt="">
+          <h2>We Are the BK Wets</h2>
+          <p>We were founded in 2015 after an overwhelming response to our New York Water Polo Meetup.  We provide a place to scrimmage and a group to have a beer with after the scrimmage. Ages of members range from 18 to "None of your business." We're co-ed, and field teams for women's and co-ed games.</p>
+          <h2>Our Philosophy</h2>
+          <p>The game is the greatest teacher of the game. Our coaches like talking but refer watching you have fun. If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have fun.</p>
+          <h2>Be Part of Our Team</h2>
+          <p>We are straight, gay, white, brown, black, Romanian, Canadian, Australian, etc. It's New York, so it's a diverse crew. It's a good time, and you should join us.</p>
+          <h2>Practice Times</h2>
+          <p>We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We also have a more instructional beinnger friendly practice at Mondays at 6pm at the Gertrude Ederle Recreation Center.</p>
+        </div>
+        <div id="women" class="women">
+          <h1>Urban Dolphins!</h1>
+          <img src="images/women.jpg" alt="">
+
+          <div>
+            <p>Our women's team is a combination of experienced and new players, nicknamed the Urban Dolphins. Our ladies like to play against the boys and against other women, scrimmaging with NYAC and Columbia. They also like to hand out outside of the pool (NO BOYS ALLOWED!). </p>
+          </div>
         </div>
       </div>
     </div>
