--- a/public/contact.html
+++ b/public/contact.html
@@ -5,6 +5,7 @@
   <title>contact - BK WETS</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/mobile.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="js/mobile.js" type="text/javascript"></script>
 </head>
 <body>
@@ -63,7 +64,17 @@
       </div>
     </div>
     <div id="footer">
-      <div>
+      <div class="social-media">
+        <a href="https://www.instagram.com/brooklynwetswp/" target="_blank">
+          <i class="fa fa-instagram"></i>
+        </a>
+        <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" target="_blank">
+          <i class="fa fa-meetup"></i>
+        </a>
+
+        <i class="fa fa-envelope-o"></i>
+      </div>
+      <div class="mark">
         <p>&copy; 2017 by Brooklyn Wets. All rights reserved.</p>
       </div>
     </div>
