--- a/public/contact.html
+++ b/public/contact.html
@@ -24,9 +24,9 @@
           <li>
             <a href="women.html">women</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="events.html">events</a>
-          </li>
+          </li> -->
           <li class="selected">
             <a href="contact.html">Contact</a>
           </li>
@@ -43,7 +43,6 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.1361967857847!2d-73.96257888459498!3d40.71501817933152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259608942751b%3A0x3a85b95850bbd7a2!2sMetropolitan+Recreation+Center!5e0!3m2!1sen!2sus!4v1466816902978" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <h2>ADDRESS</h2>
         <p>261 Bedford Ave, Brooklyn, NY 11211</p>
-
 <hr>
 <br>
         <h2>Beginner Friendly Mondays at 6pm</h2>
@@ -55,12 +54,10 @@
         <h2>Email</h2>
         <a href="mailto:info@brooklynwets.com?Subject=Water%20Polo">info@brooklynwets.com</a>
         <h2>CONTRIBUTE</h2>
-        <a href="https://www.generosity.com/sports-fundraising/brooklyn-wets-water-polo-equipment">Crowdfunding Campaign</a>
-        <h2>MEETUP</h2>
-        <a href="http://www.meetup.com/New-York-Water-Polo-Meetup/">Our meetup page</a>
+        <a href="https://www.generosity.com/sports-fundraising/brooklyn-wets-water-polo-equipment" target="_blank">Crowdfunding Campaign</a>
         <h4>JOIN THE BK WETS NOW</h4>
         <p>All levels are welcome. Rec Center Membership is required.</p>
-        <a href="https://www.nycgovparks.org/programs/recreation-centers/membership">Rec Membership Info</a>
+        <a href="https://www.nycgovparks.org/programs/recreation-centers/membership" target="_blank">Rec Membership Info</a>
       </div>
     </div>
     <div id="footer">
