--- a/public/women.haml.html
+++ b/public/women.haml.html
@@ -15,12 +15,11 @@
       %link{ :rel => "stylesheet", :href => "css/mobile.css"}
       %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title Women - BK Wets
-  %body
-
-    #header.container
+  %div
+    %header.container
       %a{:href => "/index", :class => "logo"}
         %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
-      %ul#menu
+      %ul
         %li
           %a{:href => "/index"} Home
         %li
@@ -35,8 +34,7 @@
         %li
           %a{:href => "/whiteboard"}
             %i{:class => "fas fa-volleyball-ball fa-3x"}
-
-    #body.container
+    %body.container
       %img{:src => "/images/women.jpg", :alt => "our women"}
         %h1 Urban Dolphins
         %p Our women's team is a combination of experienced and new players, nicknamed the Urban Dolphins. Our ladies like to play against the boys and against other women, scrimmaging with NYAC and Columbia. They also like to hand out outside of the pool (NO BOYS ALLOWED!).
