--- a/public/about.haml.html
+++ b/public/about.haml.html
@@ -15,11 +15,11 @@
       %link{ :rel => "stylesheet", :href => "css/mobile.css"}
       %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title About - BK Wets
-  %body
-    #header.container
+  %div
+    %header.container
       %a{:href => "/index", :class => "logo"}
         %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
-      %ul#menu
+      %ul
         %li
           %a{:href => "/index"} Home
         %li.selected
@@ -34,8 +34,7 @@
         %li
           %a{:href => "/whiteboard"}
             %i{:class => "fas fa-volleyball-ball fa-3x"}
-
-    #body.container
+    %body.container
       %img{:src => "/images/home.jpg", :alt => "us"}
         %h1 About BK Wets
         %h2 We Are the BK Wets
