--- a/public/events.haml.html
+++ b/public/events.haml.html
@@ -15,9 +15,8 @@
       %link{ :rel => "stylesheet", :href => "css/mobile.css"}
       %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title Events - BK Wets
-  %body
-
-    #header.container
+  %div
+    %header.container
       %a{:href => "/index", :class => "logo"}
         %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
       %ul#menu
@@ -36,12 +35,12 @@
           %a{:href => "/whiteboard"}
             %i{:class => "fas fa-volleyball-ball fa-3x"}
 
-    #body.container
+    %body.container
       %img{:src => "/images/lake-mohawk.jpg", :alt => "next"}
         %h1 LAKE MOHAWK
         %p JUNE 17-18, 2017
         %p Outdoor Tournament at
-          %a{:href => "http://www.lakemohawkpool.com/"} Lake Mohawk Pool
+        %a{:href => "http://www.lakemohawkpool.com/"} Lake Mohawk Pool
 
     #footer.container
     2017 by Brooklyn Wets. All rights reserved.
