--- a/public/about.haml.html
+++ b/public/about.haml.html
@@ -2,49 +2,56 @@
 %html
   %head
     %meta{ :name => "description"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_paragph.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_ul_gallery.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_ul.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/bodystyle.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/contact.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/events.css", :type => "text/css"}
-      %link{ :rel => "stylesheet", :href => "css/body/headerstyle.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/footer.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/grid_img.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/grid_text.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/home.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/nav.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/polo.css", :type => "text/css"}
-      %link{ :rel => "stylesheet", :href => "css/body/style.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Work+Sans'}
       %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Roboto'}
+      %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Montserrat'}
+      %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Dosis'}
       %link{ :rel => "stylesheet", :href => "https://use.fontawesome.com/releases/v5.4.1/css/all.css"}
-      %link{ :rel => "stylesheet", :href => "css/mobile.css"}
-      %script{:src => "js/mobile.js", :type => "text/javascript"}
-    %title About - BK Wets
-  %div
-    %header.container
-      %a{:href => "/index", :class => "logo"}
-        %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
-      %ul
-        %li
-          %a{:href => "/index"} Home
-        %li.selected
-          %a{:href => "/about"} About
-        %li
-          %a{:href => "/women"} Women
-        %li
-          %a{:href => "/events"} Events
-        %li
-          %a{:href => "/contact"}
-            %i{:class => "fas fa-address-card fa-3x"}
-        %li
-          %a{:href => "/whiteboard"}
-            %i{:class => "fas fa-volleyball-ball fa-3x"}
-    %body.container
-      %img{:src => "/images/home.jpg", :alt => "us"}
-        %h1 About BK Wets
-        %h2 We Are the BK Wets
-        %p We were founded in 2015 after an overwhelming response to our New York Water Polo Meetup.  We provide a place to scrimmage and a group to have a beer with after the scrimmage. Ages of members range from 18 to "None of your business." We're co-ed, and field teams for women's and co-ed games
-        %h2 Our Philosophy
-        %p The game is the greatest teacher of the game. Our coaches like talking but refer watching you have fun. If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have fun.
-        %h2 Be Part of Our Team"
-        %p We are straight, gay, white, brown, black, Romanian, Canadian, Australian, etc. It's New York, so it's a diverse crew. It's a good time, and you should join us.
-        %h2 Practice Times
-        %p We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We also have a more instructional beinnger friendly practice at Mondays at 6pm at the Gertrude Ederle Recreation Center.
 
-    #footer.container
-      2017 by Brooklyn Wets. All rights reserved.
+      -# %link{ :rel => "stylesheet", :href => "css/mobile.css"}
+      -# %script{:src => "js/mobile.js", :type => "text/javascript"}
+    %title About - BK Wets
+  %body.encloser
+    %nav.container
+      %a.item{:href => "/index"}
+        %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
+      %a.item{:href => "/index"} Home
+      %a.item.selected{:href => "/about"} About
+      %a.item{:href => "/women"} Women
+      %a.item{:href => "/events"} Events
+      %a.item{:href => "/contact"}
+        %i{:class => "fas fa-address-card fa-3x"}
+      %a.item{:href => "/whiteboard"}
+        %i{:class => "fas fa-volleyball-ball fa-3x"}
+  %div.container-a      
+  %div.container-a
+    %img.item{:src => "/images/about1.jpg", :alt => "us"}
+    %h1.text-item We Are the BK Wets
+    %p.text-item We were founded in 2015 after an overwhelming response to our New York Water Polo Meetup.  We provide a place to scrimmage and a group to have a beer with after the scrimmage. Ages of members range from 18 to "None of your business." We're co-ed, and field teams for women's and co-ed games.
+  %div.container-a
+    %p.text-item The game is the greatest teacher of the game. Our coaches like talking but refer watching you have fun. If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have fun.
+    %h1.text-item Our Philosophy
+    %img.item{:src => "/images/about2.jpg", :alt => "us"}
+  %div.container-a
+    %img.item{:src => "/images/about3.jpg", :alt => "us"}
+    %h1.text-item Be Part of Our Team
+    %p.text-item We are straight, gay, white, brown, black, Romanian, Canadian, Australian, etc. It's New York, so it's a diverse crew. It's a good time, and you should join us.
+  %div.container-a
+    %p.text-item We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We also have a more instructional beinnger friendly practice at Mondays at 6pm at the Gertrude Ederle Recreation Center.
+    %h1.text-item Practice Times
+    %img.item{:src => "/images/about4.png", :alt => "us"}
+
+  %footer.container
+    2017 by Brooklyn Wets. All rights reserved.
