--- a/public/events.haml.html
+++ b/public/events.haml.html
@@ -2,45 +2,50 @@
 %html
   %head
     %meta{ :name => "description"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_paragph.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_ul_gallery.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_ul.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/bodystyle.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/contact.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/events.css", :type => "text/css"}
-      %link{ :rel => "stylesheet", :href => "css/body/headerstyle.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/footer.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/grid_img.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/grid_text.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/home.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/nav.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/polo.css", :type => "text/css"}
-      %link{ :rel => "stylesheet", :href => "css/body/style.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Work+Sans'}
       %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Roboto'}
+      %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Montserrat'}
+      %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Dosis'}
       %link{ :rel => "stylesheet", :href => "https://use.fontawesome.com/releases/v5.4.1/css/all.css"}
-      %link{ :rel => "stylesheet", :href => "css/mobile.css"}
-      %script{:src => "js/mobile.js", :type => "text/javascript"}
+
+      -# %link{ :rel => "stylesheet", :href => "css/mobile.css"}
+      -# %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title Events - BK Wets
-  %div
-    %header.container
-      %a{:href => "/index", :class => "logo"}
+  %body.encloser
+    %nav.container
+      %a.item{:href => "/index"}
         %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
-      %ul#menu
-        %li
-          %a{:href => "/index"} Home
-        %li
-          %a{:href => "/about"} About
-        %li
-          %a{:href => "/women"} Women
-        %li.selected
-          %a{:href => "/events"} Events
-        %li
-          %a{:href => "/contact"}
-            %i{:class => "fas fa-address-card fa-3x"}
-        %li
-          %a{:href => "/whiteboard"}
-            %i{:class => "fas fa-volleyball-ball fa-3x"}
+      %a.item{:href => "/index"} Home
+      %a.item{:href => "/about"} About
+      %a.item{:href => "/women"} Women
+      %a.item.selected{:href => "/events"} Events
+      %a.item{:href => "/contact"}
+        %i{:class => "fas fa-address-card fa-3x"}
+      %a.item{:href => "/whiteboard"}
+        %i{:class => "fas fa-volleyball-ball fa-3x"}
+  %div.container-a
+  %div.container-a
 
-    %body.container
-      %img{:src => "/images/lake-mohawk.jpg", :alt => "next"}
-        %h1 LAKE MOHAWK
-        %p JUNE 17-18, 2017
-        %p Outdoor Tournament at
-        %a{:href => "http://www.lakemohawkpool.com/"} Lake Mohawk Pool
+    %img.item{:src => "/images/events1.png", :alt => "us"}
+    %h1.text-item Lake Mohawk Pool
+    %p.text-item
+      LAKE MOHAWK
+      JUNE 17-18, 2017
+      Outdoor Tournament at
+      http://www.lakemohawkpool.com
 
-    #footer.container
+
+  %footer.container
     2017 by Brooklyn Wets. All rights reserved.
