--- a/public/women.haml.html
+++ b/public/women.haml.html
@@ -2,42 +2,44 @@
 %html
   %head
     %meta{ :name => "description"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_paragph.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_ul_gallery.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/body_ul.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/bodystyle.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/contact.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/events.css", :type => "text/css"}
-      %link{ :rel => "stylesheet", :href => "css/body/headerstyle.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/footer.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/grid_img.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/grid_text.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/home.css", :type => "text/css"}
+      %link{ :rel => "stylesheet", :href => "css/body/nav.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/polo.css", :type => "text/css"}
-      %link{ :rel => "stylesheet", :href => "css/body/style.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Work+Sans'}
       %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Roboto'}
+      %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Montserrat'}
+      %link{ :rel => "stylesheet", :href => 'https://fonts.googleapis.com/css?family=Dosis'}
       %link{ :rel => "stylesheet", :href => "https://use.fontawesome.com/releases/v5.4.1/css/all.css"}
-      %link{ :rel => "stylesheet", :href => "css/mobile.css"}
-      %script{:src => "js/mobile.js", :type => "text/javascript"}
-    %title Women - BK Wets
-  %div
-    %header.container
-      %a{:href => "/index", :class => "logo"}
-        %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
-      %ul
-        %li
-          %a{:href => "/index"} Home
-        %li
-          %a{:href => "/about"} About
-        %li.selected
-          %a{:href => "/women"} Women
-        %li
-          %a{:href => "/events"} Events
-        %li
-          %a{:href => "/contact"}
-            %i{:class => "fas fa-address-card fa-3x"}
-        %li
-          %a{:href => "/whiteboard"}
-            %i{:class => "fas fa-volleyball-ball fa-3x"}
-    %body.container
-      %img{:src => "/images/women.jpg", :alt => "our women"}
-        %h1 Urban Dolphins
-        %p Our women's team is a combination of experienced and new players, nicknamed the Urban Dolphins. Our ladies like to play against the boys and against other women, scrimmaging with NYAC and Columbia. They also like to hand out outside of the pool (NO BOYS ALLOWED!).
 
-    #footer.container
-    2017 by Brooklyn Wets. All rights reserved.
+      -# %link{ :rel => "stylesheet", :href => "css/mobile.css"}
+      -# %script{:src => "js/mobile.js", :type => "text/javascript"}
+    %title  Women - BK Wets
+  %body.encloser
+    %nav.container
+      %a.item{:href => "/index"}
+        %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
+      %a.item{:href => "/index"} Home
+      %a.item{:href => "/about"} About
+      %a.item.selected{:href => "/women"} Women
+      %a.item{:href => "/events"} Events
+      %a.item{:href => "/contact"}
+        %i{:class => "fas fa-address-card fa-3x"}
+      %a.item{:href => "/whiteboard"}
+        %i{:class => "fas fa-volleyball-ball fa-3x"}
+  %div.container-a
+  %div.container-a
+    %p.text-item Our women's team is a combination of experienced and new players, nicknamed the Urban Dolphins. Our ladies like to play against the boys and against other women, scrimmaging with NYAC and Columbia. They also like to hand out outside of the pool (NO BOYS ALLOWED!).
+    %img.item{:src => "/images/women1.png", :alt => "us"}
+    %h1.text-item Urban Dolphins
+
+  %footer.container
+  2017 by Brooklyn Wets. All rights reserved.
