--- a/public/index.haml.html
+++ b/public/index.haml.html
@@ -2,6 +2,10 @@
 %html
   %head
     %meta{ :name => "description"}
+      %script{ :src => "https://code.jquery.com/jquery-1.9.1.min.js"}
+      %script{ :src => "js/barra_de_nav.js"}
+      %link{ :rel => "stylesheet", :href => "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"}
+      %link{ :rel => "stylesheet", :href => "css/mobile.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/body_paragph.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/body_ul_gallery.css", :type => "text/css"}
       %link{ :rel => "stylesheet", :href => "css/body/body_ul.css", :type => "text/css"}
@@ -26,7 +30,7 @@
   %body.encloser
     %nav.container
       %a.item{:href => "/index"}
-        %img{:src => "images/bk-wets-logo.jpg", :alt =>""}
+        %img.logo{:src => "images/bk-wets-logo.jpg", :alt =>""}
       %a.item.selected{:href => "/index"} Home
       %a.item{:href => "/about"} About
       %a.item{:href => "/women"} Women
@@ -35,8 +39,15 @@
         %i{:class => "fas fa-address-card fa-3x"}
       %a.item{:href => "/whiteboard"}
         %i{:class => "fas fa-volleyball-ball fa-3x"}
+      %a.barras{:class => "", :onclick => "expantion"}
+        %i{:class => "fa fa-bars fa-3x", :onclick => "expantion"}
   %div.container-a
   %div.container-a
-  hola
+    %img.item{:src => "/images/index2.png", :alt => "us"}
+    %h1.text-item Waterpolo in Brooklyn
+  %div.container-a
+    %h1.text-item Killing it
+    %p.text-item We're the most fun you can have playing water polo in New York.
+    %img.item{:src => "/images/index1.png", :alt => "us"}
   %footer.container
-  2017 by Brooklyn Wets. All rights reserved.
+    2017 by Brooklyn Wets. All rights reserved.
