--- a/public/women.haml.html
+++ b/public/women.haml.html
@@ -27,7 +27,7 @@
       -# %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title  Women - BK Wets
   %body.encloser
-    %nav.container
+    %nav.container{:id => "TopNav"}
       %a.item{:href => "/index"}
         %img.logo{:src => "images/bk-wets-logo.jpg", :alt =>""}
       %a.item{:href => "/index"} Home
