--- a/public/contact.haml.html
+++ b/public/contact.haml.html
@@ -24,7 +24,7 @@
       -# %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title Contact us
   %body.encloser
-    %nav.container
+    %nav.container{:id => "TopNav"}
       %a.item{:href => "/index"}
         %img.logo{:src => "images/bk-wets-logo.jpg", :alt =>""}
       %a.item{:href => "/index"} Home
@@ -35,6 +35,8 @@
         %i{:class => "fas fa-address-card fa-3x"}
       %a.item{:href => "/whiteboard"}
         %i{:class => "fas fa-volleyball-ball fa-3x"}
+    %a.barras{:class => "", :onclick => "expantion"}
+      %i{:class => "fa fa-bars fa-3x", :onclick => "expantion"}
   %div.container-a
   %div.container-a
     %h1.text-item Saturdays at 2pm
