--- a/public/index.haml.html
+++ b/public/index.haml.html
@@ -28,7 +28,7 @@
       -# %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title Home - BK Wets
   %body.encloser
-    %nav.container
+    %nav.container{:id => "TopNav"}
       %a.item{:href => "/index"}
         %img.logo{:src => "images/bk-wets-logo.jpg", :alt =>""}
       %a.item.selected{:href => "/index"} Home
@@ -39,8 +39,8 @@
         %i{:class => "fas fa-address-card fa-3x"}
       %a.item{:href => "/whiteboard"}
         %i{:class => "fas fa-volleyball-ball fa-3x"}
-      %a.barras{:class => "", :onclick => "expantion"}
-        %i{:class => "fa fa-bars fa-3x", :onclick => "expantion"}
+    %a.barras{:class => "", :onclick => "expantion"}
+      %i{:class => "fa fa-bars fa-3x", :onclick => "expantion"}
   %div.container-a
   %div.container-a
     %img.item{:src => "/images/index2.png", :alt => "us"}
