--- a/public/index.haml.html
+++ b/public/index.haml.html
@@ -28,19 +28,24 @@
       -# %script{:src => "js/mobile.js", :type => "text/javascript"}
     %title Home - BK Wets
   %body.encloser
-    %nav.container{:id => "TopNav"}
-      %a.item{:href => "/index"}
-        %img.logo{:src => "images/bk-wets-logo.jpg", :alt =>""}
-      %a.item.selected{:href => "/index"} Home
-      %a.item{:href => "/about"} About
-      %a.item{:href => "/women"} Women
-      %a.item{:href => "/events"} Events
-      %a.item{:href => "/contact"}
-        %i{:class => "fas fa-address-card fa-3x"}
-      %a.item{:href => "/whiteboard"}
-        %i{:class => "fas fa-volleyball-ball fa-3x"}
-    %a.barras{:class => "", :onclick => "expantion"}
-      %i{:class => "fa fa-bars fa-3x", :onclick => "expantion"}
+    %ul.container
+      %li
+        %a.item{:href => "/index"}
+          %img.logo{:src => "images/bk-wets-logo.jpg", :alt =>""}
+      %li
+        %a.item.selected{:href => "/index"} Home
+      %li
+        %a.item{:href => "/about"} About
+      %li
+        %a.item{:href => "/women"} Women
+      %li
+        %a.item{:href => "/events"} Events
+      %li
+        %a.item{:href => "/contact"}
+          %i{:class => "fas fa-address-card fa-3x"}
+      %li
+        %a.item{:href => "/whiteboard"}
+          %i{:class => "fas fa-volleyball-ball fa-3x"}
   %div.container-a
   %div.container-a
     %img.item{:src => "/images/index2.png", :alt => "us"}
