--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="row py-4 d-flex align-items-center">
 
           <!-- Grid column -->
-          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0 text-white">
             <p>
                 <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
               <p>
