--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
       <div class="container">
           <a class="navbar-brand" href="#">
-              <img src="public/images/logo.png" width="50" height="50" class="d-inline-block align-middle" alt="">
+              <img src="public/images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
               <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,23 +38,23 @@
                 </li>
             </ul>
             <ul class="navbar-nav pb-3 pb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="/blog">Blog</a>
-                </li>
                     <li class="nav-item d-none d-lg-inline-block">
-                    <a href="" class="nav-link text-twitter">
-                    <i class="fab fa-facebook-messenger"></i>
+                    <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
+                      <i class="fab fa-meetup fa-lg"></i>
                     </a>
                     </li>
                     <li class="nav-item d-none d-lg-inline-block">
-                    <a href="" class="nav-link text-github">
-                    <i class="fab fa-instagram"></i>
+                    <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
+                    <i class="fab fa-instagram fa-lg"></i>
                     </a>
                     </li> 
-                    <li class="nav-item ml-1">
+                    <li class="nav-item d-none d-lg-inline-block">
                     <a class="btn btn-primary ml-1" href="#" role="button">CONTACT</a>
-                </li>
+                    </li>
               </ul>
+              <a class="navbar-brand ml-2" href="#">
+                <img src="public/images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
+              </a>
           </div>
       </div>  
     </nav>
@@ -97,7 +97,7 @@
                     <div class="text-center">
                       <i class="far fa-4x fa-smile-wink"></i>
                     </div>
-                    Have Fun!
+                    Donations
                   </div>
                 </div>
               </a>
@@ -107,7 +107,7 @@
                     <div class="text-center">
                       <i class="fas fa-4x fa-swimmer"></i>
                     </div>
-                    Always Learning
+                    Team does!
                   </div>
                 </div>
               </a>
@@ -119,7 +119,7 @@
                     <div class="text-center">
                       <i class="fas fa-4x fa-users"></i>
                     </div>
-                    Great Coaches
+                    Who can practice?
                   </div>
                 </div>
               </a>
@@ -133,46 +133,46 @@
   <!--main-->
 
   <!--main2-->
-  <section class="jumbotron text-center">
+  <section class="text-center jumbotron-home">
     <div class="container">
       <h1 class="display-3 font-weight-bold text-pad">¡Enjoy with us!</h1>
       <p class="lead text-muted text-pad">we invite you to meet our water polo group and discover how we have fun.</p>
     </div>
     <div class="container">
         <div class="row">
-          <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/1.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3 view overlay">
-            <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+            <img src="public/images/1.png" class="img-fluid rounded">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/2.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="https://unsplash.it/600.jpg?image=252" class="img-fluid rounded">
+            <img src="public/images/2.png" class="img-fluid rounded">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/3.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="https://unsplash.it/600.jpg?image=253" class="img-fluid rounded">
+            <img src="public/images/3.png" class="img-fluid rounded">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/4.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+            <img src="public/images/4.png" class="img-fluid rounded">
           </a>
         </div>
         <div class="row">
-          <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/5.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="https://unsplash.it/600.jpg?image=254" class="img-fluid rounded">
+            <img src="public/images/5.png" class="img-fluid rounded">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/6.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="https://unsplash.it/600.jpg?image=255" class="img-fluid rounded">
+            <img src="public/images/6.png" class="img-fluid rounded">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/7.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="https://unsplash.it/600.jpg?image=256" class="img-fluid rounded">
+            <img src="public/images/7.png" class="img-fluid rounded">
           </a>
-          <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery"
+          <a href="public/images/8.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
+            <img src="public/images/8.png" class="img-fluid rounded">
           </a>
         </div>
       </div>
@@ -195,7 +195,7 @@
             <p>
                 <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
               <p>
-                <i class="fas fa-envelope mr-3"></i> info@example.com</p>
+                <i class="fas fa-envelope mr-3"></i>info@brooklynwets.com</p>
               <p>
                 <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
               <p>
@@ -204,26 +204,16 @@
 
           <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
-            <h6 class="mb-0 text-white">Follow us on social:</h6>
-            <!-- Facebook -->
-            <a class="fb-ic">
-              <i class="fab fa-facebook-f white-text mr-4" style="color:rgb(255, 255, 255);"> </i>
-            </a>
-            <!-- Twitter -->
-            <a class="tw-ic">
-              <i class="fab fa-twitter white-text mr-4" style="color:rgb(255, 255, 255);"> </i>
-            </a>
-            <!-- Google +-->
-            <a class="gplus-ic">
-              <i class="fab fa-google-plus-g white-text mr-4" style="color:rgb(255, 255, 255);"> </i>
-            </a>
+            <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
             <!--Linkedin -->
             <a class="li-ic">
-              <i class="fab fa-linkedin-in white-text mr-4" style="color:rgb(255, 255, 255);"> </i>
+                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+              <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
             </a>
             <!--Instagram-->
             <a class="ins-ic">
-              <i class="fab fa-instagram white-text" style="color:rgb(255, 255, 255);"> </i>
+              <a href="https://www.instagram.com/brooklynwetswp/">
+              <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
             </a>
 
           </div>
@@ -237,8 +227,8 @@
 
     <!-- Footer Links -->
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© Brooklyn Wets. All rights reserved 2019. Design and development by:
-      <a href="https://mdbootstrap.com/education/bootstrap/"> BogotaDev</a>
+    <div class="footer-copyright text-center py-3">© Brooklyn Wets. All rights reserved 2019. Design and code by:
+      <a href="https://www.bogotadev.com/"> BogotaDev</a>
     </div>
     <!-- Copyright -->
   </footer>
