--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <title>Brooklyn Wets</title> 
   </head>
   <body>
