--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
       <div class="container">
           <a class="navbar-brand" href="#">
-              <img src="public/images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
+              <img src="images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
               <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
                     </li>
               </ul>
               <a class="navbar-brand ml-2" href="#">
-                <img src="public/images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
+                <img src="images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
               </a>
           </div>
       </div>  
@@ -63,7 +63,7 @@
 <header>
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="public/images/video_home.mp4" type="video/mp4">
+      <source src="images/video_home.mp4" type="video/mp4">
     </video>
     <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
@@ -140,39 +140,39 @@
     </div>
     <div class="container">
         <div class="row">
-          <a href="public/images/1.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/1.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3 view overlay">
-            <img src="public/images/1.png" class="img-fluid rounded">
+            <img src="images/1.png" class="img-fluid rounded">
           </a>
-          <a href="public/images/2.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/2.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="public/images/2.png" class="img-fluid rounded">
+            <img src="images/2.png" class="img-fluid rounded">
           </a>
-          <a href="public/images/3.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/3.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="public/images/3.png" class="img-fluid rounded">
+            <img src="images/3.png" class="img-fluid rounded">
           </a>
-          <a href="public/images/4.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/4.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="public/images/4.png" class="img-fluid rounded">
+            <img src="images/4.png" class="img-fluid rounded">
           </a>
         </div>
         <div class="row">
-          <a href="public/images/5.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/5.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="public/images/5.png" class="img-fluid rounded">
+            <img src="images/5.png" class="img-fluid rounded">
           </a>
-          <a href="public/images/6.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/6.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="public/images/6.png" class="img-fluid rounded">
+            <img src="images/6.png" class="img-fluid rounded">
           </a>
-          <a href="public/images/7.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/7.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="public/images/7.png" class="img-fluid rounded">
+            <img src="images/7.png" class="img-fluid rounded">
           </a>
-          <a href="public/images/8.png" data-toggle="lightbox" data-gallery="gallery"
+          <a href="images/8.png" data-toggle="lightbox" data-gallery="gallery"
             class="col-md-3">
-            <img src="public/images/8.png" class="img-fluid rounded">
+            <img src="images/8.png" class="img-fluid rounded">
           </a>
         </div>
       </div>
@@ -246,9 +246,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="public/js/ekko-lightbox.min.js"></script>
-  <script src="public/js/ekko-lightbox.min.js.map"></script>
-  <script src="public/js/customjs.js"></script>
+  <script src="js/ekko-lightbox.min.js"></script>
+  <script src="js/ekko-lightbox.min.js.map"></script>
+  <script src="/js/customjs.js"></script>
   <script>$(document).on('click', '[data-toggle="lightbox"]', function(event) {
     event.preventDefault();
     $(this).ekkoLightbox();
